syntax = "proto3";

option csharp_namespace = "calculate";

package calculate;

service Calculate {
  rpc CalculateAll (CalculateRequest) returns (stream CalculateResponse);
  rpc CombineName (stream CombineNameRequest) returns (CombineNameResponse);
  rpc TotalAllArray (stream TotalAllArrayRequest) returns (stream TotalAllArrayResponse);
}

message CalculateRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}
message CalculateResponse {
  string total = 1;
}

message CombineNameRequest{
  string name =1 ;
}
message CombineNameResponse{
  string combinedName = 1;
}


message TotalAllArrayRequest{
    Student student = 1;
}
message Student{
    string name = 1;
    repeated int32 notes = 2;
}
message TotalAllArrayResponse{
  string message = 1;
}

